fixed path for css in main.handlebars so it was not redundantly looking for public because public was defined as static. updated css so that the contrast made sense. created login.handlebars but haven't figured out how to see that in insomnia yet

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,11 +11,22 @@
   font-size: 18px;
 }
 
-html {
+header, .project:not(:last-child) {
+  border-bottom: 1px solid var(--wilted-blueberry);
+  background-color: var(--deep-blue);
+  color: white;
+}
+
+body {
   background-color: var(--vague-blue);
 }
 
 nav {
   background-color: var(--deep-blue);
+  width: 100%;
+  color: white;
+}
 
+.logout.btn {
+  display: none;
 }
